Added polymer template

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,20 +17,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <link rel="import" href="../webflux-signup-form.html">
   </head>
   <body>
-
-    <p>An example of <code>&lt;webflux-signup-form&gt;</code>:</p>
-
-    <button>Say Something</button>
-
-    <webflux-signup-form author='{"name": "Lord Meowser", "image": "http://placekitten.com/g/200/300"}' fancy>
-      <h2>Hello seed-element</h2>
-    </webflux-signup-form>
-
-    <script>
-      document.querySelector('button').addEventListener('click', function() {
-        alert(document.querySelector('seed-element').sayHello('Hallo!'));
-      });
-    </script>
-
+    <webflux-signup-form label="Sign Up"></webflux-signup-form>
   </body>
 </html>
